classes updated